# Machine-Learning-Specialization-Coursera

./: README.md
C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab03_Model_Representation_Soln.ipynb  C1_W1_Lab04_Cost_function_Soln.ipynb  C1_W1_Lab05_Gradient_Descent_Soln.ipynb  main.py  pyproject.toml
